<resources>
    <string name="app_name">ExpressSend</string>
    <string name="icon_index">首页</string>
    <string name="icon_message">消息</string>
    <string name="icon_order">订单</string>
    <string name="icon_integral">积分</string>
    <string name="icon_call">电话</string>
    <string name="icon_room_number">房间号</string>
    <string name="icon_school">学校</string>
    <string name="icon_address">宿舍楼</string>
    <string name="sign_out">退出</string>
    <string name="release_order">发布快递订单</string>
    <string name="banner_item">banner item</string>
    <string name="release">发布订单</string>
    <string name="action_search">action_search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_be_received_order">待接单</string>
    <string name="Order_received">已接单</string>
    <string name="To_be_received">待收货</string>
    <string name="Completed">已完成</string>
    <string name="To_be_Comment">待评价</string>
    <string name="View_all">查看全部</string>
    <string name="my_release_order">发布的订单</string>
    <string name="picture_describe">图片描述</string>
    <string name="all_order">全部</string>
    <string name="todo">TODO</string>
    <string name="send_message">发送</string>
    <string name="please_receive_order">请求接单</string>
    <string name="network_invalid">当前网络不可用</string>
    <string name="please_add_email">请添加邮箱</string>
    <string name="please_set_nickname">请设置昵称</string>
    <string name="no_write">未填写</string>
    <string name="zero">0</string>
    <string name="modify">修改</string>
    <string name="please_login">请先登录!</string>
    <string name="no_nickname">无昵称</string>
    <string name="contact">联系</string>
    <string name="receive_order">接受订单</string>
    <string name="modify_order">修改订单</string>
    <string name="cancel">取消</string>
    <string name="in_delivery">派送中</string>
    <string name="to_be_served">待送达</string>
    <string name="release_loading">发布中…</string>
    <string name="modify_loading">修改中…</string>
    <string name="release_success">发布成功</string>
    <string name="release_failure">发布失败</string>
    <string name="modify_success">修改成功</string>
    <string name="modify_failure">修改失败</string>
    <string name="incomplete_information">信息填写不全</string>
    <string name="Order_toBeSend">待派送</string>
    <string name="receive_my_order">接收的订单</string>
    <string name="no_find_new_order">暂未发现新的订单</string>
    <string name="toBeReceive">待收货</string>
    <string name="sending">正在派送</string>
    <string name="toBeSend">待送达</string>
    <string name="payIntegralNum">%1$d积分</string>
    <string name="payIntegral">支付积分</string>
    <string name="complete">完成</string>
    <string name="payIntegralAddMao">支付积分：</string>
    <string name="integral_hints">当您的订单长时间未接收时，可以适当调整你的支付积分额度!</string>
    <string name="slider_desc">slider滑动积分设置</string>
    <string name="address_book">地址簿</string>
    <string name="create_address">新建地址</string>
    <string name="delete_address">删除</string>
    <string name="edit_address">编辑</string>
    <string name="edit_success">编辑成功</string>
    <string name="edit_failure">编辑失败</string>
    <string name="create_success">创建成功</string>
    <string name="create_failure">该地址已存在</string>
    <string name="sure_release">确认发布</string>
    <string name="sure_modify">确认修改</string>
    <string name="sure">确认</string>
    <string name="action_bar_title">标题</string>
    <string name="create_address_title">新建地址</string>
    <string name="edit_address_title">编辑地址</string>
    <string name="key_mode">mode</string>
    <string name="schoolNameHint">学校名称（例如：四川师范大学）</string>
    <string name="detailNameHint">详细地址（例如：xxx驿站或者xxx旁）</string>
    <string name="no_save_address_hint">未保存地址信息</string>
    <string name="_30">30</string>
    <string name="content_no_write">内容未填写!</string>
    <string name="order_details">订单详情</string>
    <string name="comment">评论</string>
    <string name="comment_success">评论成功</string>
    <string name="comment_failure">评论失败</string>
    <string name="no_release_comment">暂未发现评论</string>
    <string name="pay_integral_set_wrong">支付积分设置错误</string>
    <string name="release_comment">发表评论</string>
    <string name="comment_hint">聊聊本次快递待取的感受吧！</string>
    <string name="high_comment">好评</string>
    <string name="personal_page">个人主页</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_failure">删除失败</string>
    <string name="start_send_order">开始派送</string>
    <string name="reset">重置</string>
    <string name="delivery">快递</string>
    <string name="integral_not_enough">当前积分不足</string>
    <string name="multiple_sort">综合排序</string>
    <string name="refuse">拒绝</string>
    <string name="agree">同意</string>
    <string name="request_receive_order">对方请求您的接单</string>
    <string name="can_browe_history_comment">你可以查看对方历史评价</string>
</resources>