<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="bottom">

    <RelativeLayout
        android:id="@+id/dialog_titleParent"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/blue_364">

        <TextView
            android:id="@+id/tv_cancelIntegral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            android:layout_alignParentStart="true"
            android:text="@string/cancel"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:text="@string/payIntegral"/>
        <TextView
            android:id="@+id/tv_completeIntegral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:layout_marginEnd="16dp"
            android:textSize="18sp"
            android:layout_alignParentEnd="true"
            android:text="@string/complete"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/title_payIntegral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/blue_364"
        android:layout_below="@+id/dialog_titleParent"
        android:text="@string/payIntegralAddMao"/>
    <TextView
        android:id="@+id/res_payIntegral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:layout_toEndOf="@+id/title_payIntegral"
        android:layout_below="@+id/dialog_titleParent"
        android:text="0"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/slider_desc"
        android:value="1.0"
        android:valueFrom="0.0"
        android:valueTo="5.0"
        android:stepSize="1.0"
        android:layout_below="@+id/res_payIntegral"/>

    <TextView
        android:id="@+id/title_hints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/slider"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="12sp"
        android:text="提示："/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/title_hints"
        android:layout_below="@id/slider"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="12sp"
        android:layout_marginBottom="16dp"
        android:text="@string/integral_hints"/>
</RelativeLayout>